// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductResult snapshot Product not null with edit permissions 1`] = `
<div
  className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Data
      </span>
    </div>
    <div
      className="MuiCardHeader-action"
    >
      <button
        className="MuiButtonBase-root MuiIconButton-root makeStyles-editButton-5"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiCardContent-root"
  >
    <mockProductDetails />
  </div>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiCardActions-root MuiCardActions-spacing"
  >
    <mockProductProfitText />
    <div
      className="MuiBox-root MuiBox-root-131"
    >
      <mockProductChangeState />
    </div>
  </div>
</div>
`;

exports[`ProductResult snapshot Product not null without edit permissions 1`] = `
<div
  className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Data
      </span>
    </div>
  </div>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiCardContent-root"
  >
    <mockProductDetails />
  </div>
</div>
`;

exports[`ProductResult snapshot Product null 1`] = `
<div
  className="makeStyles-emptyPlaceholder-1"
>
  <img
    alt="No product"
    className="makeStyles-image-2"
    src="notFound.svg"
  />
  <h6
    className="MuiTypography-root makeStyles-emptyText-3 MuiTypography-subtitle1"
  >
    Product not found
  </h6>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-backToProducts-4"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      Back to products page
    </span>
  </button>
</div>
`;
